Update SystemScheduler.java